stats ordering by timestamp